[package]
name = "ktui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25.0"
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
unicode-width = "0.1.9" 
tokio = { version = "1.20.1", features = ["full"] }
serde = "1"
serde_json = "1"
